2004-11-15  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl: Improve diagnostic messages.
	(make_config_h): Don't use dir when creating temp file.
	(save_copy): Use File::Copy::move to portably rename the file, possibly
	across device boundries.

2004-11-15  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl (make_config_h): Improve diagnostic message.

2004-11-11  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in (opterr): Define as rpl_opterr for consistency.
	* config.h.in, config.h: Regenerated.

2004-11-05  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (readlink): Removed. Use lib/readlink.c instead.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in (_UINT32_T): Add from top-level config.h.in file.
	* Makefile.in, config.h.in, config.h, stamp-chi: Regenerated.
		
2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in (HAVE_DECL_FLOCKFILE, HAVE_DECL_FUNLOCKFILE,
	HAVE_ENVIRON_DECL, HAVE_ERRNO_DECL, HAVE_SEARCH_H, HAVE_SETENV,
	HAVE_TSEARCH, HAVE_UNSETENV, MALLOC_0_IS_NONNULL, VOID_UNSETENV):
	Add new config options from top-level config.h.in using #undef.
	Some of these probably exist under Windows and need to be defined.
	(nanosleep): Move into alphabetical order.
	(TRUST_OS_FILE_CACHE): Removed as obsolete.
	* config.h.in, config.h, stamp-chi: Regenerated.
	
2004-10-30  Mark D. Baushke  <mdb@juniper.net>

	* config.h.in.in, config.h.in, config.h: Regenerated

2004-10-26  Derek Price  <derek@ximbiot.com>

	* Makefile.am (config.h.in): Allow this file to be built even when not
	in maintainer mode when it is actually missing.  Add comment.
	(stamp-chi): Remove maintainer mode restriction.  Add comments.

2004-10-25  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (HAVE_RPMATCH): Undef this irrelevant macro on WOE32.

2004-10-23  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.in: Change #undef HAVE_STDINT_H to #define ... 1.
	Change #undef HAVE_STDINT_H_WITH_UINTMAX to #define ... 1.